Some more refactoring and beautifying